# poc-purchasing-approval

./: .env.ci  .gitignore  .pre-commit-config.yaml  README.md  compose.ci.be.yaml  compose.ci.e2e.yaml  compose.ci.yaml
backend/: .gitignore  alembic.ini  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 088311b066bd_create_initial_tables.py
backend/src/: main.py
backend/src/db/: base.py  config.py  session.py
backend/src/features/auth/: endpoint.py  interfaces.py  repository.py  schemas.py  service.py
backend/src/features/purchasing_approvals/confirm/: endpoint.py  interfaces.py  repository.py  schemas.py  service.py
backend/src/features/purchasing_approvals/list/: schemas.py  (+4 more)
backend/src/models/: __init__.py  draft_purchasing_approval.py  purchasing_approval.py  purchasing_approval_ai_summary.py  purchasing_approval_comment.py  purchasing_approval_event.py  purchasing_approval_status.py  role.py  user.py  user_position.py  user_role.py
backend/src/scripts/: create_pagination_test_approvals.py  delete_approvals_data.py
backend/src/scripts/seeds/: purchasing_approval_statuses_seed.py  roles_seed.py  run_all_seeds.py  user_positions_seed.py  user_roles_seed.py  users_seed.py
backend/src/shared/: container.py  security.py
backend/src/shared/enums/: approval_actions_enum.py  approval_status_enum.py
backend/tests/: conftest.py
backend/tests/features/auth/: test_login.py  test_logout.py  test_me.py
backend/tests/integration/: conftest.py
backend/tests/unit/shared/: test_security.py
(+187 files in other folders)
